# hw2-pt1

./: CMakeLists.txt  mpi.cpp  pthreads.cpp  serial.cpp
